2013-03-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: use RbConfig::CONFIG instead of obsolete
	    constant Config::CONFIG.
	* lib/oci8/object.rb, test/test_bind_time.rb, test/test_metadata.rb
	  test/test_object.rb, test/test_oci8.rb:
	    suppress warning: assigned but unused variable

2013-03-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/oci8.h:
	    refactor oci8_lob_t.

2013-03-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: fix segmentation fault when the process
	    exits on rubinius.

2013-03-02  KUBO Takehiro  <kubo@jiubao.org>
	* .yardopts, ext/oci8/object.c, lib/oci8/metadata.rb,
	  lib/oci8/oracle_version.rb: update comments for rdoc/yard.

2013-03-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c: change arguments of internal methods
	    OCIHandle#attr_get_*() to ignore "ORA-24328: illegal
	    attribute value".
	* lib/oci8/metadata.rb: change OCI8::Metadata::Base#obj_id,
	    #obj_name and #obj_schema not to raise "ORA-24328:
	    illegal attribute value".

2013-03-02  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: fix for ruby 2.0.0 to make binary gems.

2013-03-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for compilation on Windows x64 by mingw64.

2013-01-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: export a main function for Solaris x86 (32-bit).
	    When a main function is invisible from Oracle instant client
	    11.2.0.3 for Solaris x86 (32-bit), OCIEnvCreate() fails by
	    unknown reasons.
	* docs/platform-specific-issues.md: change the workaround for
	    Solaris x86 (32-bit) instant client.

2013-01-06  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.4 and 2.1.3
	* VERSION: change the version to 2.1.4.
	* docs/platform-specific-issues.md: update solaris-specific document.
	* ext/oci8/connection_pool.c, ext/oci8/encoding.c, ext/oci8/metadata.c,